# absence_bot

./: .gitignore  Cargo.toml
migrations/: 20240125205602_base.sql
src/: main.rs
